# aiotusclient

./: .editorconfig  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  HISTORY.md  HISTORY.rst  LICENSE  README.md  README.rst  TESTING.md  appveyor.yml  client.py  default.yml  dev-requirements.txt  pyproject.toml  pytest.ini  request.py  requirements-ci.txt  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  uploader.py
.github/workflows/: black-matcher.json  default.yml  isort-matcher.json  lint-flake8.yml  typecheck-mypy.yml
ai/backend/client/: __init__.py  admin.py  agent.py  auth.py  base.py  compat.py  config.py  exceptions.py  kernel.py  keypair.py  request.py  session.py  vfolder.py
ai/backend/client/asyncio/: __init__.py  admin.py  kernel.py  vfolder.py
ai/backend/client/cli/: __init__.py  admin.py  config.py  download.py  files.py  logs.py  ls.py  pretty.py  proxy.py  ps.py  run.py  vfolder.py
ai/backend/client/cli/admin/: agents.py  keypairs.py  sessions.py  vfolders.py
aiotusclient/: baseuploader.py  client.py  exceptions.py  progress_reporter.py  pyproject.toml  request.py  tmp_test.py  uploader.py
aiotusclient/src/ai/backend/aiotusclient/: exceptions.py  uploader.py
changes/: 0.breaking  0.feature  100.feature  101.feature  102.feature  103.breaking  103.feature  103.fix  106.feature  107.feature  108.fix  109.feature  110.feature  111.breaking  113.fix  114.feature  115.feature  77.feature  79.feature  80.feature  82.breaking  82.feature  85.feature  90.fix  94.fix  96.feature  97.feature  99.feature
docs/: .readthedocs.yml  Makefile  README-translation.md  README-translation.txt  admin.rst  agent.rst  base.rst  cli.examples.rst  conf.py  config.rst  examples.rst  exceptions.rst  index.html  index.rst  kernel.rst  keypair.rst  request.rst  requirements.txt  session.rst  vfolder.rst
docs/_static/: custom.css
docs/api/: auth.rst  exec.rst  index.rst  kernels.rst  stream.rst
docs/cli/: apps.rst  code-execution.rst  config.rst  examples.rst  index.rst  sessions.rst  storage.rst
docs/dev/: examples.rst
docs/func/: auth.rst  index.rst  keypair.rst  manager.rst  scaling-group.rst  session-template.rst  vfolder.rst
docs/gsg/: config.rst  examples.rst  index.rst  installation.rst  testing.rst
docs/locale/ko/LC_MESSAGES/: index.po
docs/locale/ko/LC_MESSAGES/cli/: examples.po  index.po
docs/locale/ko/LC_MESSAGES/func/: admin.po  agent.po  index.po  kernel.po  keypair.po  manager.po  vfolder.po
docs/locale/ko/LC_MESSAGES/gsg/: config.po  examples.po  index.po  installation.po  session.po
docs/locale/ko/LC_MESSAGES/lowlevel/: base.po  exceptions.po  index.po  request.po
docs/lowlevel/: index.rst
requirements/: build.txt  docs.txt
sorna/: auth.py  compat.py  config.py  exceptions.py  kernel.py  request.py
sorna/asyncio/: kernel.py
sorna/cli/: __init__.py  __main__.py  pretty.py  run.py
src/ai/backend/client/: __init__.py  admin.py  agent.py  auth.py  base.py  compat.py  config.py  domain.py  etcd.py  exceptions.py  group.py  helper.py  image.py  kernel.py  keypair.py  keypair_resource_policy.py  manager.py  pagination.py  request.py  resource.py  resource_policy.py  scaling_group.py  session.py  session_template.py  system.py  test_utils.py  types.py  user.py  utils.py  versioning.py  vfolder.py
src/ai/backend/client/asyncio/: __init__.py  kernel.py  vfolder.py
src/ai/backend/client/cli/: __init__.py  __main__.py  announcement.py  app.py  config.py  dotfile.py  files.py  interaction.py  logs.py  manager.py  pagination.py  (+7 more)
tests/: common.py  conftest.py  test_agent.py  test_asyncio_kernel.py  test_auth.py  test_base.py  test_cli_commands.py  test_config.py  test_connection_functional.py  test_dummy.py  test_image.py  test_integration.py  test_kernel.py  test_keypair.py  test_load.py  test_manager.py  test_pretty.py  test_request.py  test_resource_policy.py  test_vfolder.py
tests/cli/: test_cli_commands.py  test_cli_proxy.py
tests/integration/: test_agent.py  test_auth.py  test_image.py  test_kernel.py  test_keypair.py  test_load.py  test_manager.py  test_request.py  test_resource_policy.py
(+44 files in other folders)
