[metadata]
name = aiotusclient
version = attr: ai.backend.aiotusclient.__version__
description = Backend.AI aiotusclient
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = sergey@lablup.com
license = LGPLv3
classifiers =
    Development Status :: 1 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development
project_urls =
    Documentation = https://docs.backend.ai
    Source = https://github.com/lablup/aiotusclient
    Tracker = https://github.com/lablup/aiotusclient/issues

[options]

packages = find_namespace:
python_requires = >=3.8
setup_requires =
    setuptools>=49.3.1
install_requires =
    aiotools>=0.9.1
    tqdm>=4.0.0
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.34.2
    twine>=3.2.0
test =
    pytest>=6.0.1
    pytest-asyncio>=0.14.0
    pytest-cov>=2.10.0
    pytest-mock>=3.2.0
    codecov>=2.1.8
lint =
    flake8>=3.8.0
typechcek =
    mypy>=0.782
dev =
ci =

[options.packages.find]
where = src
include = ai.backend.*

[options.package_data]
ai.backend = py.typed

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W503,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,dist,docs

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that require spawning Dockerized kernel sessions

[mypy]
ignore_missing_imports = true
namespace_packages = true