[metadata]
name = backend.ai-aiotusclient
version = attr: ai.backend.common.aiotusclient.__version__
description = tus.io-compatible upload client library for Python asyncio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lablup/aiotusclient
author = Lablup Inc.
author_email = sergey@lablup.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development
project_urls =
    Source = https://github.com/lablup/aiotusclient
    Tracker = https://github.com/lablup/aiotusclient/issues

[options]
packages = find_namespace:
python_requires = >=3.7
setup_requires =
    setuptools>=49.3.1
install_requires =
    aiohttp>=3.6.2
    tqdm>=4.42
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.35.1
    twine>=3.2.0
test =
    pytest>=6.0.1
    pytest-asyncio>=0.14.0
    pytest-cov>=2.10.0
    pytest-mock>=3.2.0
    codecov>=2.1.8
lint =
    flake8>=3.8.4
    isort>=5.6.4
    black
typecheck =
    mypy>=0.800
dev =
ci =

[options.packages.find]
include = aiotusclient

[options.package_data]
aiotusclient = py.typed

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W503,W504,N801,N802
extend-ignore = E203,W503
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,dist,docs

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that require spawning Dockerized kernel sessions

[mypy]
ignore_missing_imports = true
mypy_path = src
namespace_packages = true
explicit_package_bases = true
